--- a/dataproject/dataproject.ipynb
+++ b/dataproject/dataproject.ipynb
@@ -12,10 +12,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note the following:** \n",
-    "> 1. This is *not* meant to be an example of an actual **data analysis project**, just an example of how to structure such a project.\n",
-    "> 1. Remember the general advice on structuring and commenting your code\n",
-    "> 1. The `dataproject.py` file includes a function which can be used multiple times in this notebook."
+    "## Authers\n",
+    "- Oliver Hjorhoey\n",
+    "- Joachim Niemann\n",
+    "- Frederik Alexander Jensen"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,52 +104,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1989-01-01</td>\n",
-       "      <td>121.5</td>\n",
+       "      <td>121.5103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1989-02-01</td>\n",
-       "      <td>117.9</td>\n",
+       "      <td>117.9263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1989-03-01</td>\n",
-       "      <td>115.2</td>\n",
+       "      <td>115.2228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1989-04-01</td>\n",
-       "      <td>118.5</td>\n",
+       "      <td>118.4715</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1989-05-01</td>\n",
-       "      <td>120.1</td>\n",
+       "      <td>120.1326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1989-06-01</td>\n",
-       "      <td>118.2</td>\n",
+       "      <td>118.1901</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>1989-07-01</td>\n",
-       "      <td>116.0</td>\n",
+       "      <td>115.9522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>1989-08-01</td>\n",
-       "      <td>117.2</td>\n",
+       "      <td>117.1584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>1989-09-01</td>\n",
-       "      <td>117.2</td>\n",
+       "      <td>117.1610</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>1989-10-01</td>\n",
-       "      <td>114.4</td>\n",
+       "      <td>114.3638</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -157,19 +157,19 @@
       ],
       "text/plain": [
        "         date  production\n",
-       "0  1989-01-01       121.5\n",
-       "1  1989-02-01       117.9\n",
-       "2  1989-03-01       115.2\n",
-       "3  1989-04-01       118.5\n",
-       "4  1989-05-01       120.1\n",
-       "5  1989-06-01       118.2\n",
-       "6  1989-07-01       116.0\n",
-       "7  1989-08-01       117.2\n",
-       "8  1989-09-01       117.2\n",
-       "9  1989-10-01       114.4"
+       "0  1989-01-01    121.5103\n",
+       "1  1989-02-01    117.9263\n",
+       "2  1989-03-01    115.2228\n",
+       "3  1989-04-01    118.4715\n",
+       "4  1989-05-01    120.1326\n",
+       "5  1989-06-01    118.1901\n",
+       "6  1989-07-01    115.9522\n",
+       "7  1989-08-01    117.1584\n",
+       "8  1989-09-01    117.1610\n",
+       "9  1989-10-01    114.3638"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "388cfd7d6768419487221e6940ca4eda",
+       "model_id": "b62d01a28d8e49b680e473639af3bc15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -298,62 +298,62 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1989-01-01</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>121.5</td>\n",
+       "      <td>18.02</td>\n",
+       "      <td>121.5103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1989-02-01</td>\n",
-       "      <td>17.9</td>\n",
-       "      <td>117.9</td>\n",
+       "      <td>17.94</td>\n",
+       "      <td>117.9263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1989-03-01</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>115.2</td>\n",
+       "      <td>19.48</td>\n",
+       "      <td>115.2228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1989-04-01</td>\n",
-       "      <td>21.1</td>\n",
-       "      <td>118.5</td>\n",
+       "      <td>21.07</td>\n",
+       "      <td>118.4715</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1989-05-01</td>\n",
-       "      <td>20.1</td>\n",
-       "      <td>120.1</td>\n",
+       "      <td>20.12</td>\n",
+       "      <td>120.1326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1989-06-01</td>\n",
-       "      <td>20.1</td>\n",
-       "      <td>118.2</td>\n",
+       "      <td>20.05</td>\n",
+       "      <td>118.1901</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>1989-07-01</td>\n",
-       "      <td>19.8</td>\n",
-       "      <td>116.0</td>\n",
+       "      <td>19.78</td>\n",
+       "      <td>115.9522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>1989-08-01</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>117.2</td>\n",
+       "      <td>18.58</td>\n",
+       "      <td>117.1584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>1989-09-01</td>\n",
-       "      <td>19.6</td>\n",
-       "      <td>117.2</td>\n",
+       "      <td>19.59</td>\n",
+       "      <td>117.1610</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>1989-10-01</td>\n",
-       "      <td>20.1</td>\n",
-       "      <td>114.4</td>\n",
+       "      <td>20.10</td>\n",
+       "      <td>114.3638</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -361,19 +361,19 @@
       ],
       "text/plain": [
        "         date  price  production\n",
-       "0  1989-01-01   18.0       121.5\n",
-       "1  1989-02-01   17.9       117.9\n",
-       "2  1989-03-01   19.5       115.2\n",
-       "3  1989-04-01   21.1       118.5\n",
-       "4  1989-05-01   20.1       120.1\n",
-       "5  1989-06-01   20.1       118.2\n",
-       "6  1989-07-01   19.8       116.0\n",
-       "7  1989-08-01   18.6       117.2\n",
-       "8  1989-09-01   19.6       117.2\n",
-       "9  1989-10-01   20.1       114.4"
+       "0  1989-01-01  18.02    121.5103\n",
+       "1  1989-02-01  17.94    117.9263\n",
+       "2  1989-03-01  19.48    115.2228\n",
+       "3  1989-04-01  21.07    118.4715\n",
+       "4  1989-05-01  20.12    120.1326\n",
+       "5  1989-06-01  20.05    118.1901\n",
+       "6  1989-07-01  19.78    115.9522\n",
+       "7  1989-08-01  18.58    117.1584\n",
+       "8  1989-09-01  19.59    117.1610\n",
+       "9  1989-10-01  20.10    114.3638"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "max    133.9       195.4             5.3        4.9"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
       "Model:                            OLS   Adj. R-squared:                 -0.002\n",
       "Method:                 Least Squares   F-statistic:                    0.1843\n",
       "Date:                Tue, 16 Apr 2024   Prob (F-statistic):              0.668\n",
-      "Time:                        10:21:19   Log-Likelihood:                -368.60\n",
+      "Time:                        10:28:58   Log-Likelihood:                -368.60\n",
       "No. Observations:                 388   AIC:                             741.2\n",
       "Df Residuals:                     386   BIC:                             749.1\n",
       "Df Model:                           1                                         \n",
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.011\n",
       "Method:                 Least Squares   F-statistic:                     5.119\n",
       "Date:                Tue, 16 Apr 2024   Prob (F-statistic):             0.0242\n",
-      "Time:                        10:21:19   Log-Likelihood:                 354.17\n",
+      "Time:                        10:28:58   Log-Likelihood:                 354.17\n",
       "No. Observations:                 387   AIC:                            -704.3\n",
       "Df Residuals:                     385   BIC:                            -696.4\n",
       "Df Model:                           1                                         \n",
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
