--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ASAD model, positive supply shock"
+    "# AS/AD model"
    ]
   },
   {
