--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -337,20 +337,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:red;\"> Nice. To demonstrate some extra numerical skills, you could find the equilibrium using a root finder. This can be done the same way as we've done in class: make a function that computes excess aggregate demand for a given pi, and then find the pi that makes excess demand 0."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Analyze the effects of a positive supply shock hitting the economy in period 1 and disappearing in period 2.\n",
     "We want to illustrate the effects in the short and long run using a $y-\\pi$ diagram. Then provide some intuition."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -476,14 +469,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In period 1, the positive supply shock hits, causing the AS curve to shift downward by the distance $|s_t|$, resulting in lower inflation and higher output. The economic interpretation is that the supply shock puts downward pressure on inflation. This prompts the central bank to ease monetary policy, leading to an increase in output. The rise in output boosts employment, causing the marginal product of labor to decline, and consequently, the marginal production costs increase. This puts upward pressure on inflation, explaining why inflation falls less than $|s|$. The upward pressure on inflation prompts the central bank to moderate the easing of monetary policy. Then the shock dissappears ($s_2=0$). <span style=\"color:red;\"> Once again, you could find actual equilibrium using the method I described above.\n",
+    "In period 1, the positive supply shock hits, causing the AS curve to shift downward by the distance $|s_t|$, resulting in lower inflation and higher output. The economic interpretation is that the supply shock puts downward pressure on inflation. This prompts the central bank to ease monetary policy, leading to an increase in output. The rise in output boosts employment, causing the marginal product of labor to decline, and consequently, the marginal production costs increase. This puts upward pressure on inflation, explaining why inflation falls less than $|s|$. The upward pressure on inflation prompts the central bank to moderate the easing of monetary policy. Then the shock dissappears ($s_2=0$). \n",
     "\n",
-    "The inflation expectations are static, so $\\pi_{2e} = \\pi_{1}$. The AS curve shifts upward, so it intersects the point $(\\bar{y}, \\pi_{1})$, <span style=\"color:red;\"> mark this point in the plot </span> and the economy moves from equilibrium $E_{1}$ to $E_{2}$ <span style=\"color:red;\"> these as well </span>, where output is lower and inflation is higher. Economically, the explanation is that the removal of the shock pushes inflation upward, while the adjustment in inflation expectations pulls inflation downward. The net effect is that inflation rises compared to the previous period, prompting the central bank to tighten monetary policy (from an accommodative stance), causing output to fall but remain above the structural level."
+    "The inflation expectations are static, so $\\pi_{2e} = \\pi_{1}$. The AS curve shifts upward, so it intersects the point $(\\bar{y}, \\pi_{1})$, and the economy moves from equilibrium $E_{1}$ to $E_{2}$, where output is lower and inflation is higher. Economically, the explanation is that the removal of the shock pushes inflation upward, while the adjustment in inflation expectations pulls inflation downward. The net effect is that inflation rises compared to the previous period, prompting the central bank to tighten monetary policy (from an accommodative stance), causing output to fall but remain above the structural level."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -621,13 +614,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:red;\"> Ok - but remember that the point of this course is to demonstrate your knowledge of numerical methods. I think you get around that part a bit too easily. It would help to use a root finder to find the equilibrium. You could also try to simulate the convergence back towards steady state for this given shock."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Extension of the AS/AD Model"
    ]
   },
@@ -652,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
